--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block page_header %}
     <div class="container header-container">
@@ -15,45 +16,45 @@
         <div class="row">
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
                 <div class="image-container my-5">
-                    {% if product.image %}
-                        <a href="{{ product.image.url }}" target="_blank">
-                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                    {% if current_product.image %}
+                        <a href="{{ current_product.image.url }}" target="_blank">
+                            <img class="card-img-top img-fluid" src="{{ current_product.image.url }}" alt="{{ current_product.name }}">
                         </a>
                         {% else %}
                         <a href="">
-                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ current_product.name }}">
                         </a>
                     {% endif %}
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="product-details-container mb-5 mt-md-5">
-                    <p class="mb-0">{{ product.name }}</p>
-                    <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
-                    {% if product.category %}
+                    <p class="mb-0">{{ current_product.name }}</p>
+                    <p class="lead mb-0 text-left font-weight-bold">${{ current_product.price }}</p>
+                    {% if current_product.category %}
                     <p class="small mt-1 mb-0">
-                        <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
-                            <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                        <a class="text-muted" href="{% url 'products' %}?category={{ current_product.category.name }}">
+                            <i class="fas fa-tag mr-1"></i>{{ current_product.category.friendly_name }}
                         </a>
                     </p>
                     {% endif %}
-                    {% if product.rating %}
-                        <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                    {% if current_product.rating %}
+                        <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ current_product.rating }} / 5</small>
                     {% else %}
                         <small class="text-muted">No Rating</small>
                     {% endif %}
                     {% if request.user.is_superuser %}
                     <small class="ml-3">
-                        <a href="{% url 'edit_product' product.id %}">Edit</a> | 
-                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                        <a href="{% url 'edit_product' current_product.id %}">Edit</a> | 
+                        <a class="text-danger" href="{% url 'delete_product' current_product.id %}">Delete</a>
                     </small>
                 {% endif %}
-                    <p class="mt-3">{{ product.description }}</p>
-                    <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                    <p class="mt-3">{{ current_product.description }}</p>
+                    <form class="form" action="{% url 'add_to_bag' current_product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
                             <div class="form-row">
-                                {% with product.has_sizes as s %}
+                                {% with current_product.has_sizes as s %}
                                 {% if s %}
                                     <div class="col-12">
                                         <p><strong>Size:</strong></p>
@@ -72,7 +73,7 @@
                                     <div class="input-group">
                                         <div class="input-group-prepend">
                                             <button class="decrement-qty btn btn-black rounded-0" 
-                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                data-item_id="{{ current_product.id }}" id="decrement-qty_{{ current_product.id }}">
                                                 <span class="icon">
                                                     <i class="fas fa-minus"></i>
                                                 </span>
@@ -80,11 +81,11 @@
                                         </div>
                                         <input class="form-control qty_input" type="number"
                                             name="quantity" value="1" min="1" max="99"
-                                            data-item_id="{{ product.id }}"
-                                            id="id_qty_{{ product.id }}">
+                                            data-item_id="{{ current_product.id }}"
+                                            id="id_qty_{{ current_product.id }}">
                                         <div class="input-group-append">
                                             <button class="increment-qty btn btn-black rounded-0"
-                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                data-item_id="{{ current_product.id }}" id="increment-qty_{{ current_product.id }}">
                                                 <span class="icon">
                                                     <i class="fas fa-plus"></i>
                                                 </span>
@@ -106,6 +107,50 @@
                             {% endwith %}
                         </div>
                     </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 card mb-4  mt-3 ">
+                <h3>Reviews:</h3>
+                <div class="card-body">
+                    <!-- We want a for loop inside the empty control tags to iterate through each review in reviews -->
+                    {% for review in reviews %}
+                    <div class="reviews" style="padding: 10px;">
+                        <p class="font-weight-bold">
+                            <!-- The reviewers's name goes here. Check the model if you're not sure what that is -->
+                            {{ review.name }}
+                            <span class=" text-muted font-weight-normal">
+                                <!-- The reviews created date goes here -->
+                                {{ review.added_on }}
+                            </span>
+                        </p>
+                        <!-- The body of the review goes before the | -->
+                        <p id="review-message">{{ review.message}}</p>
+                    </div>
+                    <!-- Our for loop ends here -->
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="col-md-4 card mb-4  mt-3 ">
+                <div class="card-body">
+                    {% if reviewed %}
+                    <div class="alert alert-success" role="alert">
+                        Your review is awaiting approval
+                    </div>
+                    {% else %}
+                    {% if user.is_authenticated %}    
+                    <h3>Leave a review:</h3>
+                    <p>Posting as: {{ user.username }}</p>
+                    <form method="POST" style="margin-top: 1.3em;" action="">
+                        {{ review_form | crispy }}
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-signup btn-lg">Submit</button>
+                    </form>
+                    {% endif %}
+                    {% endif %}
                 </div>
             </div>
         </div>
