--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,4 +1,5 @@
-<!-- Footer -->
+{% load static %}
+
 <footer class="page-footer font-small stylish-color-dark pt-4  footer-div">
 
     <!-- Footer Links -->
@@ -64,17 +65,16 @@
         </a>
       </li>
       <li class="list-inline-item">
-        <a href="#">Contact us</a>
+        <a href="{% url 'contact' %}">Contact us</a>
       </li>
     </ul>
     <!-- Social buttons -->
   
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2022 Copyright:
-        <i class="fab fa-github">
-      <a href="https://github.com/raeel97"> Raeel97 </a>
+        
+      <a href="https://github.com/raeel97"><i class="fab fa-github"></i>Raeel97</a>
     </div>
     <!-- Copyright -->
   
   </footer>
-  <!-- Footer -->
