--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -12,8 +12,8 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container-fluid">
-        <div class="row">
+    <div class="container-fluid padding-override">
+        <div class="row margin-override">
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
                 <div class="image-container my-5">
                     {% if current_product.image %}
