--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -46,7 +46,7 @@
     <!-- Call to action -->
     <p class="text-center">Join our mailing list!</p>
     <form class="input-group justify-content-center">
-        <input type="text" class="form-control-sm" placeholder="example@example.com"
+        <input type="text" class="form-control-sm crispy-override" placeholder="example@example.com"
           aria-label="Your email" aria-describedby="basic-addon2">
         <div class="input-group-append">
           <button class="btn btn-sm my-0 explore-button" type="button">Submit</button>
