--- a/static/css/base.css
+++ b/static/css/base.css
@@ -338,3 +338,14 @@ input[name='q']::placeholder {
 .padding-override {
     padding: 0 !important;
 }
+/* This fixes the css in footer for newsletter button, crispy forms for contact 
+form was effecting it */
+.crispy-override {
+    height: calc(1.5em + 0.5rem + 2px) !important;
+    font-size: .875rem!important;
+    line-height: 1.5!important;
+    border-radius: 0.2rem!important;
+    width: auto!important;
+    margin: revert !important;
+    display: unset !important;
+}
