--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+<!-- {% extends "base.html" %} -->
 {% load static %}
 
 <footer class="page-footer font-small stylish-color-dark pt-4  footer-div">
