--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -32,7 +32,7 @@
 
         <li class="nav-item">
             <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'products' %}?category=goldenraffleticket">
-                Golden Ticket Raffle
+                Updates
             </a>
         </li>
     </ul>
