--- a/templates/base.html
+++ b/templates/base.html
@@ -144,6 +144,13 @@
     <script type="text/javascript">
         $('.toast').toast('show');
     </script>
+    <script>
+        setTimeout(function () {
+            let messages = document.getElementById('msg');
+            let alert = new bootstrap.Alert(messages);
+            alert.close();
+        }, 2000);
+    </script>
     {% endblock %}
 
     
