--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -31,7 +31,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'products' %}?category=goldenraffleticket">
+            <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'updates' %}">
                 Updates
             </a>
         </li>
