--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -51,8 +51,8 @@
   <form class="input-group justify-content-center" action="https://herokuapp.us20.list-manage.com/subscribe/post?u=afbe33b5f314de5e9fd3919d9&amp;id=e16404b4d5"
   method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank"
   novalidate>
-    <input type="text" class="form-control-sm crispy-override" placeholder="example@example.com" aria-label="Your email"
-      aria-describedby="basic-addon2" type="email" value="" name="EMAIL" id="mce-EMAIL">
+    <input class="form-control-sm crispy-override" placeholder="example@example.com" aria-label="Your email"
+    type="email" value="" name="EMAIL" id="mce-EMAIL">
     <div class="input-group-append">
       <button class="btn btn-sm my-0 explore-button" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">Submit</button>
     </div>
@@ -85,8 +85,8 @@
 </footer>
 
 {% block postloadjs %}
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-<script type='text/javascript'>
+<script src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+<script>
   (function ($) {
     window.fnames = new Array();
     window.ftypes = new Array();
