--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -21,7 +21,7 @@
     </div>
 </div>
 <!--Section: Contact v.2-->
-<section class="mb-4">
+<section class="mb-4" style="width: 50%; margin: auto;">
 
     <!--Section heading-->
     <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
@@ -31,10 +31,10 @@
         a matter of hours to help you.</p>
 
 </section>
-<form action="" method="post" class="">
+<form method="POST" style="width: 50%; margin: auto;">
     {% csrf_token %}
     {{ form | crispy }}
-    <input type="submit" value="Submit">
+    <input type="submit" value="Submit" class="btn btn-black rounded-0" style="width: 20%;">
 </form>
 <!--Section: Contact v.2-->
 {% endblock %}
