--- a/templates/base.html
+++ b/templates/base.html
@@ -141,7 +141,7 @@
     <!-- Footer -->
 
     {% block postloadjs %}
-    <script type="text/javascript">
+    <script>
         $('.toast').toast('show');
     </script>
     <script>
