--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -64,12 +64,12 @@
 
   <!-- Social buttons -->
   <ul class="list-unstyled list-inline text-center">
-    <li class="list-inline-item">
+    <li class="list-inline-item footer-list">
       <a class="btn-floating btn-fb mx-1" href="https://www.facebook.com/chocolatefactory963">
         <i class="fab fa-facebook-f"></i>
       </a>
     </li>
-    <li class="list-inline-item">
+    <li class="list-inline-item footer-list">
       <a href="{% url 'contact' %}">Contact us</a>
     </li>
   </ul>
