added inoopener rl attributes for external links to developer github profile and facebook business profile

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -65,7 +65,7 @@
   <!-- Social buttons -->
   <ul class="list-unstyled list-inline text-center">
     <li class="list-inline-item footer-list">
-      <a class="btn-floating btn-fb mx-1" href="https://www.facebook.com/chocolatefactory963" target="_blank">
+      <a class="btn-floating btn-fb mx-1" href="https://www.facebook.com/chocolatefactory963" target="_blank" rel="noopener">
         <i class="fab fa-facebook-f"></i>
       </a>
     </li>
@@ -78,7 +78,7 @@
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2022 Copyright:
 
-    <a href="https://github.com/raeel97" id="github" target="_blank"><i class="fab fa-github"></i>Raeel97</a>
+    <a href="https://github.com/raeel97" id="github" target="_blank"  rel="noopener"><i class="fab fa-github"></i>Raeel97</a>
   </div>
   <!-- Copyright -->
 
